some work on notes

--- a/conf/shell.cfg
+++ b/conf/shell.cfg
@@ -12,6 +12,7 @@
 # 	$port - target port
 # 	$domain - target hostname
 # 	$wordlists - path to badkarma's wordlists
+#   $scripts - path to badkarma's scripts
 #   $outfile - path to save nmap scan
 #
 
@@ -49,11 +50,7 @@ whois_ip = whois $host
 whois_domain = whois $domain
 
 [generic]
-nc = nc $host:$port
-
-ncat_default = ncat -v $host $port
-ncat_ssl = ncat -v --ssl $host $port
-
+ncat = ncat -v $host $port
 telnet = telnet $host $port
 openssl_client = openssl s_client -connect $host:$port
 grab_banner = echo | nc -v -n -w1 $host $port
@@ -103,6 +100,8 @@ metasploit_encrypt_overflow = msfconsole -n -q -x "use auxiliary/scanner/telnet/
 
 [ftp]
 ftpclient = ftp $host $port 
+enum_users = perl $scripts/ftp-user-enum.pl -U $wordlists/users.txt -t $host
+enum_user_inetutils = perl $scripts/ftp-user-enum.pl -M iu -U $wordlists/users.txt -t $host
 
 nmap_brute = nmap --script ftp-brute -oX $outfile -p$port $host
 nmap_vsftpd_backdoor = nmap --script ftp-vsftpd-backdoor -oX $outfile -p$port $host
@@ -132,6 +131,10 @@ nmap_service_discovery_udp = sudo nmap -sU --script=dns-service-discovery -oX $o
 enum4linux = enum4linux $host
 nbtscan = nbtscan $host
 samrdump = python /usr/share/doc/python-impacket/examples/samrdump.py $host $port/SMB
+polenum = polenum $host
+rpcclient_null_session = echo 'srvinfo' | rpcclient $host -U%
+
+net_enum_domain_admins = net rpc group members "Domain Admins" -I $host -U%
 
 nmap_brute = nmap -sV --script=smb-brute -p$port -oX $outfile $host
 nmap_enum_users = nmap --script smb-enum-users.nse -oX $outfile -p$port $host
@@ -221,6 +224,7 @@ metasploit_exec = msfconsole -n -q -x "use auxiliary/admin/mssql/mssql_exec; set
 
 [mysql]
 connect-as-root = mysql -u root -h $host --port=$port -p
+
 nmap_audit = nmap --script=mysql-audit -p$port -oX $outfile $host
 nmap_enum = nmap --script=mysql-enum -p$port -oX $outfile $host
 nmap_brute = nmap -sV --script=mysql-brute -oX $outfile -p$port $host
@@ -243,3 +247,8 @@ nmap_tns_version = nmap -sV --script=oracle-tns-version -p$port -oX $outfile $ho
 [psql]
 connect-as-postgres = psql -h $host -p $port -U postgres
 
+[finger]
+enum_users = perl $scripts/finger-user-enum.pl -U $wordlists/users.txt -t $host
+
+[auth]
+enum_users = ident-user-enum $host $port
