--- a/conf/shell.cfg
+++ b/conf/shell.cfg
@@ -66,6 +66,8 @@ dirb = dirb http://$rhost:$rport
 wafw00f = wafw00f http://$rhost:$rport
 wpscan = wpscan -e t,tt,u,p -r http://$rhost:$rport/
 httrack = httrack http://$rhost:$rport -O /tmp/httrack-$rhost:$rport
+sslscan = sslscan --verbose --sni-name=$domain $rhost:$rport
+joomscan = joomscan -u http://$rhost:$rport/
 
 nikto_default = nikto -h $rhost:$rport
 nikto_ssl = nikto -ssl -h $rhost:$rport
