added new nmap commands and knockpy

--- a/conf/shell.cfg
+++ b/conf/shell.cfg
@@ -24,6 +24,7 @@ nmap_intense_scan_all_tcp = nmap -p 1-65535 -T4 -A -v -oX $outfile $rhost
 nmap_intense_scan_no_ping = nmap -T4 -A -v -Pn -oX $outfile $rhost
 nmap_ping_scan = nmap -sn -oX $outfile $rhost
 nmap_scan_full_syn = nmap -Pn -sV -sC -A -p- -oX $outfile $rhost
+nmap_ctf= sudo nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 
 nmap_full_tcp = nmap -Pn -sT -p- -A -oX $outfile $rhost
 nmap_scan_udp = sudo nmap -sU -T4 -sC -oX $outfile $rhost
@@ -45,6 +46,7 @@ unicornscan_udp_scan = sudo unicornscan -mU $rhost
 dnsrecon = dnsrecon -d $domain -D /usr/share/wordlists/dnsmap.txt -t std
 dnsenum = dnsenum $domain -f $wordlists/subdomains.txt
 sublist3r = sublist3r -d $domain
+knockpy = knockpy $domain
 
 whois_ip = whois $rhost
 whois_domain = whois $domain
@@ -54,6 +56,7 @@ ncat = ncat -v $rhost $rport
 telnet = telnet $rhost $rport
 openssl_client = openssl s_client -connect $rhost:$rport
 grab_banner = echo | nc -v -n -w1 $rhost $rport
+nmap_ctf= sudo nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap $outfile 
 
 nmap_grab_banner = nmap -sV --script=banner -oX $outfile -p$rport $rhost
 nmap_default_scripts = nmap -sV -sC -oX $outfile -p$rport $rhost
