--- a/conf/shell.cfg
+++ b/conf/shell.cfg
@@ -24,7 +24,6 @@ nmap_intense_scan_all_tcp = nmap -p 1-65535 -T4 -A -v -oX $outfile $rhost
 nmap_intense_scan_no_ping = nmap -T4 -A -v -Pn -oX $outfile $rhost
 nmap_ping_scan = nmap -sn -oX $outfile $rhost
 nmap_scan_full_syn = nmap -Pn -sV -sC -A -p- -oX $outfile $rhost
-nmap_ctf= sudo nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 
 nmap_full_tcp = nmap -Pn -sT -p- -A -oX $outfile $rhost
 nmap_scan_udp = sudo nmap -sU -T4 -sC -oX $outfile $rhost
@@ -33,6 +32,7 @@ nmap_traceroute_geolocate = sudo nmap --traceroute --script traceroute-geolocati
 nmap_dnsbrute = nmap --script dns-brute.nse -oX $outfile $domain
 nmap_hostmap = nmap --script hostmap-bfk.nse -oX $outfile $rhost
 
+searchsploit = sudo nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 metasploit_enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
 
 # not ready
@@ -56,7 +56,7 @@ ncat = ncat -v $rhost $rport
 telnet = telnet $rhost $rport
 openssl_client = openssl s_client -connect $rhost:$rport
 grab_banner = echo | nc -v -n -w1 $rhost $rport
-nmap_ctf= sudo nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap $outfile 
+searchsploit = sudo nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap $outfile 
 
 nmap_grab_banner = nmap -sV --script=banner -oX $outfile -p$rport $rhost
 nmap_default_scripts = nmap -sV -sC -oX $outfile -p$rport $rhost
