--- a/conf/shell.cfg
+++ b/conf/shell.cfg
@@ -32,7 +32,8 @@ nmap_traceroute_geolocate = sudo nmap --traceroute --script traceroute-geolocati
 nmap_dnsbrute = nmap --script dns-brute.nse -oX $outfile $domain
 nmap_hostmap = nmap --script hostmap-bfk.nse -oX $outfile $rhost
 
-searchsploit = sudo nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
+nmap_vulners = nmap -sV --script=$scripts/vulners.nse -oX $outfile $rhost
+searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 metasploit_enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
 
 # not ready
@@ -56,8 +57,9 @@ ncat = ncat -v $rhost $rport
 telnet = telnet $rhost $rport
 openssl_client = openssl s_client -connect $rhost:$rport
 grab_banner = echo | nc -v -n -w1 $rhost $rport
-searchsploit = sudo nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap $outfile 
+searchsploit = nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap $outfile 
 
+nmap_vulners = nmap -sV --script=$scripts/vulners.nse -p$rport -oX $outfile $rhost
 nmap_grab_banner = nmap -sV --script=banner -oX $outfile -p$rport $rhost
 nmap_default_scripts = nmap -sV -sC -oX $outfile -p$rport $rhost
 
