added new welcome page

--- a/conf/shell.cfg
+++ b/conf/shell.cfg
@@ -252,7 +252,7 @@ nmap_enum_users = nmap -sV --script=oracle-enum-users -p$rport -oX $outfile $rho
 nmap_sid_brute = nmap -sV --script=oracle-sid-brute -p$rport -oX $outfile $rhost
 nmap_tns_version = nmap -sV --script=oracle-tns-version -p$rport -oX $outfile $rhost
 
-[psql]
+[postgresql]
 connect-as-postgres = psql -h $rhost -p $rport -U postgres
 
 [finger]
