experimental masscan XML support, scripts fix

--- a/conf/shell.cfg
+++ b/conf/shell.cfg
@@ -33,6 +33,9 @@ nmap_dnsbrute = nmap --script dns-brute.nse -oX $outfile $domain
 nmap_hostmap = nmap --script hostmap-bfk.nse -oX $outfile $rhost
 
 nmap_vulners = nmap -sV --script=$scripts/vulners.nse -oX $outfile $rhost
+
+masscan_full_tcp = sudo masscan -oX $outfile -p0-65535 --banner $rhost
+
 searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 metasploit_enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
 
@@ -62,6 +65,8 @@ searchsploit = nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap 
 nmap_vulners = nmap -sV --script=$scripts/vulners.nse -p$rport -oX $outfile $rhost
 nmap_grab_banner = nmap -sV --script=banner -oX $outfile -p$rport $rhost
 nmap_default_scripts = nmap -sV -sC -oX $outfile -p$rport $rhost
+
+masscan_grab_banner = sudo masscan -oX $outfile -p$rport --banner $rhost
 
 [http]
 arachni = sudo arachni http://$rhost:$rport
