--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -66,6 +66,8 @@ masscan_grab_banner = sudo masscan -oX $outfile -p$rport --banner $rhost
 
 [http]
 arachni = sudo arachni http://$rhost:$rport
+sqlmap = sqlmap --url=http://$rhost:$rport/ --keep-alive --crawl=10 --threads=5 --eta --batch --level=5 --risk=3 --banner --is-dba --dbs --tables -s /tmp/scan_report.txt --flush-session -t /tmp/scan_trace.txt --fresh-queries
+commix = commix --crawl=2 --url http://$rhost:$rport/
 skipfish = skipfish -o /tmp/skip http://$rhost:$rport
 whatweb = whatweb $rhost:$rport
 dirb = dirb http://$rhost:$rport
