initial shodan support

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -34,7 +34,9 @@ nmap_hostmap = nmap --script hostmap-bfk.nse -oX $outfile $rhost
 
 nmap_vulners = nmap -sV --script=$scripts/vulners.nse -oX $outfile $rhost
 
-masscan_full_tcp = sudo masscan -oX $outfile -p0-65535 --banner $rhost
+masscan_full_tcp = sudo masscan -oX $outfile -p0-65535 --rate 100000 --banner $rhost
+
+get-from-shodan = python3 $scripts/smap.py --out $outfile $rhost
 
 searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 metasploit_enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
