added wfuzz and sqlmap tamper

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -65,13 +65,16 @@ nmap_grab_banner = nmap -sV --script=banner -oX $outfile -p$rport $rhost
 nmap_default_scripts = nmap -sV -sC -oX $outfile -p$rport $rhost
 
 masscan_grab_banner = sudo masscan -oX $outfile -p$rport --banner $rhost
+wfuzz = wfuzz -c -u http://$rhost:$rport/FUZZ --hc 404 -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt
 
 [http]
 arachni = sudo arachni http://$rhost:$rport
 sqlmap = sqlmap --url=http://$rhost:$rport/ --keep-alive --crawl=10 --threads=5 --eta --batch --level=5 --risk=3 --banner --is-dba --dbs --tables -s /tmp/scan_report.txt --flush-session -t /tmp/scan_trace.txt --fresh-queries
+sqlmap_tamper = sqlmap --url=http://$rhost:$rport/ --keep-alive --crawl=10 --threads=5 --eta --batch --level=5 --risk=3 --banner --is-dba --dbs --tables -s /tmp/scan_report.txt --flush-session -t /tmp/scan_trace.txt --fresh-queries --tamper=apostrophemask,apostrophenullencode,base64encode,between,chardoubleencode,charencode,charunicodeencode,equaltolike,greatest,ifnull2ifisnull,multiplespaces,nonrecursivereplacement,percentage,randomcase,securesphere,space2comment,space2plus,space2randomblank,unionalltounion,unmagicquotes
 commix = commix --crawl=2 --url http://$rhost:$rport/
 skipfish = skipfish -o /tmp/skip http://$rhost:$rport
 whatweb = whatweb $rhost:$rport
+wfuzz = wfuzz -c -u http://$rhost:$rport/FUZZ --hc 404 -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt
 dirb = dirb http://$rhost:$rport
 wafw00f = wafw00f http://$rhost:$rport
 wpscan = wpscan -e t,tt,u,p -r http://$rhost:$rport/
