--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -67,22 +67,20 @@ nmap_default_scripts = nmap -sV -sC -oX $outfile -p$rport $rhost
 masscan_grab_banner = sudo masscan -oX $outfile -p$rport --banner $rhost
 
 [http]
-arachni = sudo arachni http://$rhost:$rport
-sqlmap = sqlmap --url=http://$rhost:$rport/ --keep-alive --crawl=10 --threads=5 --eta --batch --level=5 --risk=3 --banner --is-dba --dbs --tables -s /tmp/scan_report.txt --flush-session -t /tmp/scan_trace.txt --fresh-queries
-sqlmap_tamper = sqlmap --url=http://$rhost:$rport/ --keep-alive --crawl=10 --threads=5 --eta --batch --level=5 --risk=3 --banner --is-dba --dbs --tables -s /tmp/scan_report.txt --flush-session -t /tmp/scan_trace.txt --fresh-queries --tamper=apostrophemask,apostrophenullencode,base64encode,between,chardoubleencode,charencode,charunicodeencode,equaltolike,greatest,ifnull2ifisnull,multiplespaces,nonrecursivereplacement,percentage,randomcase,securesphere,space2comment,space2plus,space2randomblank,unionalltounion,unmagicquotes
-commix = commix --crawl=2 --url http://$rhost:$rport/
-skipfish = skipfish -o /tmp/skip http://$rhost:$rport
+scan_with_arachni = sudo arachni http://$rhost:$rport
+scan_with_sqlmap = sqlmap --url=http://$rhost:$rport/ --keep-alive --crawl=10 --threads=5 --eta --batch --level=5 --risk=3 --banner --is-dba --dbs --tables -s /tmp/scan_report.txt --flush-session -t /tmp/scan_trace.txt --fresh-queries
+scan_with_commix = commix --crawl=2 --url http://$rhost:$rport/
+scan_with_skipfish = skipfish -o /tmp/skip http://$rhost:$rport
+scan_with_wpscan = wpscan -e t,tt,u,p -r http://$rhost:$rport/
+scan_with_joomscan = joomscan -u http://$rhost:$rport/
+scan_with_nikto = nikto -h $rhost:$rport
+
 whatweb = whatweb $rhost:$rport
 wfuzz = wfuzz -c -u http://$rhost:$rport/FUZZ --hc 404 -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt
 dirb = dirb http://$rhost:$rport
 wafw00f = wafw00f http://$rhost:$rport
-wpscan = wpscan -e t,tt,u,p -r http://$rhost:$rport/
 httrack = httrack http://$rhost:$rport -O /tmp/httrack-$rhost:$rport
 sslscan = sslscan --verbose --sni-name=$domain $rhost:$rport
-joomscan = joomscan -u http://$rhost:$rport/
-
-nikto_default = nikto -h $rhost:$rport
-nikto_ssl = nikto -ssl -h $rhost:$rport
 
 gobuster_top1000_robots_disallowed = gobuster -e -u http://$rhost:$rport/ -w $wordlistshttp/Top1000-RobotsDisallowed.txt
 gobuster_top10000_robots_disallowed = gobuster -e -u http://$rhost:$rport/ -w $wordlists/http/Top10000-RobotsDisallowed.txt
