added geoplugin importer

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -37,6 +37,7 @@ nmap_vulners = nmap -sV --script=$scripts/vulners.nse -oX $outfile $rhost
 masscan_full_tcp = sudo masscan -oX $outfile -p0-65535 --rate 100000 --banner $rhost
 
 get-from-shodan = python3 $scripts/smap.py --out $outfile $rhost
+get-geolocation = curl -vvv "http://www.geoplugin.net/json.gp?ip=$rhost" > $outfile
 
 searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 metasploit_enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
@@ -55,7 +56,6 @@ whois_domain = whois $domain
 
 [generic]
 ncat = ncat -v $rhost $rport
-telnet = telnet $rhost $rport
 openssl_client = openssl s_client -connect $rhost:$rport
 grab_banner = echo | nc -v -n -w1 $rhost $rport
 searchsploit = nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap $outfile 
