--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -12,9 +12,9 @@
 # 	$rport - target port
 # 	$domain - target hostname
 # 	$wordlists - path to badkarma's wordlists
-#   $scripts - path to badkarma's scripts
-#   $outfile - path to save nmap scan
-#
+#	$scripts - path to badkarma's scripts
+#	$outfile - path to save nmap scan
+#	$banner - t<rget port's banner
 
 [hostlist]
 nmap_default = nmap -oX $outfile $rhost
@@ -59,6 +59,7 @@ ncat = ncat -v $rhost $rport
 openssl_client = openssl s_client -connect $rhost:$rport
 grab_banner = echo | nc -v -n -w1 $rhost $rport
 searchsploit = nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap $outfile 
+sploitus = python3 $scripts/sploitus.py "$banner"
 
 nmap_vulners = nmap -sV --script=$scripts/vulners.nse -p$rport -oX $outfile $rhost
 nmap_grab_banner = nmap -sV --script=banner -oX $outfile -p$rport $rhost
