--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -76,11 +76,13 @@ scan_with_wpscan = wpscan -e t,tt,u,p -r http://$rhost:$rport/
 scan_with_joomscan = joomscan -u http://$rhost:$rport/
 scan_with_nikto = nikto -h $rhost:$rport
 
+clone_with_httrack = httrack http://$rhost:$rport -O /tmp/httrack-$rhost:$rport
+clone_with_wget = wget --mirror --execute robots=off --no-verbose --convert-links --backup-converted --page-requisites --adjust-extension --base=/tmp/ --directory-prefix=/tmp/ --span-hosts --domains=$domain http://$rhost:$rport/
+
 whatweb = whatweb $rhost:$rport
 wfuzz = wfuzz -c -u http://$rhost:$rport/FUZZ --hc 404 -w /usr/share/wordlists/dirbuster/directory-list-2.3-medium.txt
 dirb = dirb http://$rhost:$rport
 wafw00f = wafw00f http://$rhost:$rport
-httrack = httrack http://$rhost:$rport -O /tmp/httrack-$rhost:$rport
 sslscan = sslscan --verbose --sni-name=$domain $rhost:$rport
 
 gobuster_top1000_robots_disallowed = gobuster -e -u http://$rhost:$rport/ -w $wordlists/http/Top1000-RobotsDisallowed.txt
@@ -90,6 +92,7 @@ dirsearch_default_iis = dirsearch --url http://$rhost:$rport/ -r -t 4 -e asp,asp
 dirsearch_default_php = dirsearch --url http://$rhost:$rport/ -r -t 4 -e php,php5,php4,phtml,php7,htm,html,sql,js,txt
 dirsearch_default_cgi = dirsearch --url http://$rhost:$rport/ -r -t 4 -e cgi,html,htm,sql,js,txt
 dirsearch_junk_files = dirsearch --url http://$rhost:$rport/ -r -t 4 -e txt,rar,zip,7z,config,conf,pdf,sql,sqlite,dump
+
 
 nmap_webdav_scan = nmap --script http-webdav-scan -oX $outfile -p$rport $rhost
 nmap_userdir_enum= nmap -sV --script=http-userdir-enum -oX $outfile -p$rport $rhost
