--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -14,7 +14,7 @@
 # 	$wordlists - path to badkarma's wordlists
 #	$scripts - path to badkarma's scripts
 #	$outfile - path to save nmap scan
-#	$banner - t<rget port's banner
+#	$banner - target port's banner
 
 [hostlist]
 nmap_default = nmap -oX $outfile $rhost
@@ -46,7 +46,8 @@ unicornscan_basic_scan = sudo unicornscan $rhost
 unicornscan_tcp_scan = sudo unicornscan -mT $rhost
 unicornscan_udp_scan = sudo unicornscan -mU $rhost
 
-dnsrecon = dnsrecon -d $domain -D /usr/share/wordlists/dnsmap.txt -t std
+dmitry = dmitry -winsepo /tmp/dmitry-$domain.txt $domain
+dnsrecon = dnsrecon -d $domain -D $wordlists/subdomains.txt -t std
 dnsenum = dnsenum $domain -f $wordlists/subdomains.txt
 sublist3r = sublist3r -d $domain
 knockpy = knockpy $domain
@@ -75,6 +76,7 @@ scan_with_skipfish = skipfish -o /tmp/skip http://$rhost:$rport
 scan_with_wpscan = wpscan -e t,tt,u,p -r http://$rhost:$rport/
 scan_with_joomscan = joomscan -u http://$rhost:$rport/
 scan_with_nikto = nikto -h $rhost:$rport
+scan_with_wapiti = wapiti -u http://$rhost:$rport/
 
 clone_with_httrack = httrack http://$rhost:$rport -O /tmp/httrack-$rhost:$rport
 clone_with_wget = wget --mirror --execute robots=off --no-verbose --convert-links --backup-converted --page-requisites --adjust-extension --base=/tmp/ --directory-prefix=/tmp/ --span-hosts --domains=$domain http://$rhost:$rport/
