new responsive hostview

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -167,6 +167,8 @@ metasploit_version = msfconsole -n -q -x "use auxiliary/scanner/smb/smb_version;
 metasploit_login = msfconsole -n -q -x "use auxiliary/scanner/smb/smb_login; set RHOSTS $rhost; set RPORT $rport; run; exit;"
 
 [pop3]
+nmap_ntlm_info = nmap -p$rport --script pop3-ntlm-info $rhost -oX $outfile
+nmap_brute = nmap -sV --script=pop3-brute -p$rport $rhost -oX $outfile
 metasploit_version = msfconsole -n -q -x "use auxiliary/scanner/pop3/pop3_version; set RHOSTS $rhost; set RPORT $rport; run; exit;"
 
 [smtp]
