--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -64,7 +64,7 @@ searchsploit = nmap -sV -sC $rhost -p $rport -oX $outfile ; searchsploit --nmap 
 sploitus = python3 $scripts/sploitus.py "$banner"
 
 nmap vulners = nmap -sV --script=$scripts/vulners.nse -p$rport -oX $outfile $rhost
-nmap grab_banner = nmap -sV --script=banner -oX $outfile -p$rport $rhost
+nmap grab banner = nmap -sV --script=banner -oX $outfile -p$rport $rhost
 nmap default scripts = nmap -sV -sC -oX $outfile -p$rport $rhost
 
 masscan grab banner = sudo masscan -oX $outfile -p$rport --banner $rhost
@@ -74,7 +74,7 @@ scan with/arachni = sudo arachni http://$rhost:$rport
 scan with/sqlmap = sqlmap --url=http://$rhost:$rport/ --keep-alive --crawl=10 --threads=5 --eta --batch --level=5 --risk=3 --banner --is-dba --dbs --tables -s /tmp/scan_report.txt --flush-session -t /tmp/scan_trace.txt --fresh-queries
 scan with/commix = commix --crawl=2 --url http://$rhost:$rport/
 scan with/skipfish = skipfish -o /tmp/skip http://$rhost:$rport
-scan with/wpscan = wpscan -e t,tt,u,p -r http://$rhost:$rport/
+scan with/wpscan = wpscan -e t,tt,u,p --url http://$rhost:$rport/
 scan with/joomscan = joomscan -u http://$rhost:$rport/
 scan with/nikto = nikto -h $rhost:$rport
 scan with/wapiti = wapiti -u http://$rhost:$rport/
