bugxfixes, added theharvester

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -41,6 +41,7 @@ get geolocation = curl -vvv "http://www.geoplugin.net/json.gp?ip=$rhost" > $outf
 
 searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 msf/enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
+msf/search_email_collector = msfconsole -n -q -x "use  auxiliary/gather/search_email_collector; set DOMAIN $domain; run; exit;"
 
 unicornscan/basic scan = sudo unicornscan $rhost
 unicornscan/tcp scan = sudo unicornscan -mT $rhost
@@ -51,6 +52,7 @@ dnsrecon = dnsrecon -d $domain -D $wordlists/subdomains.txt -t std
 dnsenum = dnsenum $domain -f $wordlists/subdomains.txt
 sublist3r = sublist3r -d $domain
 knockpy = knockpy $domain
+theharvester = theharvester -d $domain -l 500 -b all
 
 netutils/dig = dig $domain
 netutils/whois/ip = whois $rhost
