added bugmenot.com and xssed.com

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -39,6 +39,8 @@ masscan/full tcp = sudo masscan -oX $outfile -p0-65535 --rate 10000 --banner $rh
 get from shodan = python3 $scripts/smap.py --out $outfile $rhost
 get geolocation = curl -vvv "http://www.geoplugin.net/json.gp?ip=$rhost" > $outfile
 
+search on/bugmenot = python3 $scripts/bugmenot.py -s $domain
+
 searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 msf/enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
 msf/search_email_collector = msfconsole -n -q -x "use  auxiliary/gather/search_email_collector; set DOMAIN $domain; run; exit;"
@@ -98,7 +100,7 @@ dirsearch/default php = dirsearch --url http://$rhost:$rport/ -r -t 4 -e php,php
 dirsearch/default cgi = dirsearch --url http://$rhost:$rport/ -r -t 4 -e cgi,html,htm,sql,js,txt
 dirsearch/junk files = dirsearch --url http://$rhost:$rport/ -r -t 4 -e txt,rar,zip,7z,config,conf,pdf,sql,sqlite,dump
 
-
+nmap/xssed = nmap -p$rport -oX $outfile --script http-xssed.nse $rhost
 nmap/webdav scan = nmap --script http-webdav-scan -oX $outfile -p$rport $rhost
 nmap/userdir enum= nmap -sV --script=http-userdir-enum -oX $outfile -p$rport $rhost
 nmap/vhosts = nmap -sV --script=http-vhosts -oX $outfile -p$rport $rhost
