fixed about, new extensions base class

--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -49,12 +49,12 @@ unicornscan/basic scan = sudo unicornscan $rhost
 unicornscan/tcp scan = sudo unicornscan -mT $rhost
 unicornscan/udp scan = sudo unicornscan -mU $rhost
 
-dmitry = dmitry -winsepo /tmp/dmitry-$domain.txt $domain
-dnsrecon = dnsrecon -d $domain -D $wordlists/subdomains.txt -t std
-dnsenum = dnsenum $domain -f $wordlists/subdomains.txt
-sublist3r = sublist3r -d $domain
-knockpy = knockpy $domain
-theharvester = theharvester -d $domain -l 500 -b all
+run/dmitry = dmitry -winsepo /tmp/dmitry-$domain.txt $domain
+run/dnsrecon = dnsrecon -d $domain -D $wordlists/subdomains.txt -t std
+run/dnsenum = dnsenum $domain -f $wordlists/subdomains.txt
+run/sublist3r = sublist3r -d $domain
+run/knockpy = knockpy $domain
+run/theharvester = theharvester -d $domain -l 500 -b all
 
 netutils/dig = dig $domain
 netutils/whois/ip = whois $rhost
