--- a/conf/shell.conf
+++ b/conf/shell.conf
@@ -40,6 +40,7 @@ get from shodan = python3 $scripts/smap.py --out $outfile $rhost
 get geolocation = curl -vvv "http://www.geoplugin.net/json.gp?ip=$rhost" > $outfile
 
 search on/bugmenot = python3 $scripts/bugmenot.py -s $domain
+search on/xssed = nmap -oX $outfile --script http-xssed.nse $domain
 
 searchsploit = nmap -sV -sC $rhost -oX $outfile ; searchsploit --nmap $outfile 
 msf/enum_dns = msfconsole -n -q -x "use auxiliary/gather/enum_dns; set DOMAIN $domain; run; exit;"
